# organ-pages

./: CLAUDE.md  README.md
astro/: package.json  vite.config.js
astro/public/: wasm-debug.html  wasm-direct-test.html
astro/public/wasm-test/: index.html  manual-test.html
astro/public/wasm-worker/: worker.js
astro/src/components/: App.tsx  AppPage.tsx  AppSidebar.tsx  Editor.tsx  FileContainer.tsx  FileList.tsx  FileListItem.tsx  ImageSelector.tsx  NavUser.tsx  Preview.tsx  SelectedFileDisplay.tsx  StoreContext.tsx  StoreProvider.tsx  useBlobStore.tsx
astro/src/components/ui/: spinner.tsx
astro/src/hooks/: useRender.ts  useSWRStore.ts  useStore.ts
astro/src/lib/: Collection.ts  CollectionAdapter.ts  EventEmitter.ts  File.ts  FileAdapter.ts  LoroModel.ts  Project.ts  ProjectAdapter.ts  Store.ts  StoreAdapter.ts  idbHelper.ts  loadFile.ts  persistence-example.ts  types.tsx  updateImageUrls.ts  utils.ts
astro/src/lib/loro-prosemirror/: awareness.ts  cursor-plugin.ts  index.ts  lib.ts  sync-plugin.ts  text-style.ts  undo-plugin.ts
astro/src/lib/loro-prosemirror/worker-sync/: index.ts  plugin.ts
astro/src/wasm-worker/: README.md  TESTING.md  client.ts  integration-test.ts  types.ts  worker-old.js  worker-old.ts  worker.js  worker.ts
astro/src/wasm/minissg/: minissg.d.ts  minissg.js  minissg_bg.wasm  minissg_bg.wasm.d.ts  package.json
wasm/: Cargo.toml  README.md  indexeddb.js
wasm/.cargo/: config.toml
wasm/src/: actor.rs  events.rs  js_conversions.rs  lib.rs  messages.rs  model.rs  store.rs  types.rs
wasm/src/model/: collection.rs  lib.rs  mod.rs  project.rs
wasm/src/model/file/: asset.rs  document.rs  lib.rs  mod.rs  page.rs  partial.rs  post.rs  schema.rs  template.rs  text.rs
wasm/src/store/: tests.rs
