[package]
name = "minissg"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]  # For compiling to WASM

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
pulldown-cmark = "0.9"
regex = "1"
handlebars = "6.1.0"
serde_yaml = "0.9.34"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
loro = "1.4.6"
js-sys = "0.3.60"
uuid = { version = "1.3.1", features = ["v4", "js", "wasm-bindgen"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4.50"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[workspace]
# Custom build output directory
target-dir = "../src/wasm/minissg"
