[package]
name = "minissg"
version = "0.1.0"
edition = "2018"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]  # For compiling to WASM and testing

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
pulldown-cmark = "0.9"
enum_dispatch = "0.3.13"
regex = "1"
handlebars = "6.1.0"
serde_yaml = "0.9.34"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
loro = "1.4.6"
loro-internal = "1.4.6"
loro-delta = "1.3.1"
uuid = { version = "1.3.1", features = ["v4", "js", "wasm-bindgen"] }
getrandom = { version = "0.2", features = ["js"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3"
web-sys = { version = "0.3.64", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[workspace]
# Custom build output directory
target-dir = "../src/wasm/minissg"

[profile.release]
opt-level = 3
